# physics_simulator

./: .gitignore  CMakeLists.txt
include/conversion/: conversion_bullet_eigen.h
include/physics/: box_character.h  simulator.h
include/visualizer/: camera.h  simulator_interface.h  visualizer.h  visualizer_object.h
shader/: build_lists.frag  build_lists.vert  resolve_lists.frag
src/conversion/: conversion_bullet_eigen.cpp
src/physics/: box_character.cpp  simulator.cpp
src/test/: test_interface.cpp
src/visualizer/: camera.cpp  simulator_interface.cpp  visualizer.cpp  visualizer_object.cpp
vs/: .gitignore  vs.sln
vs/final_project/: .gitignore  final_project.vcxproj  main.cpp
vs/test_bullet/: .gitignore  test_bullet.cpp  test_bullet.vcxproj
